--- a/.gitignore
+++ b/.gitignore
@@ -1,36 +1,49 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
-
-# testing
-/coverage
-
-# next.js
-/.next/
-/out/
-
-# production
-/build
-
-# misc
+# OS and IDE files
 .DS_Store
 *.pem
+.idea/
+.vscode/*
+!.vscode/extensions.json
+!.vscode/settings.json
+*.sublime-project
+*.sublime-workspace
+Thumbs.db
 
-# debug
+# Dependencies
+/node_modules/
+/.pnp
+.pnp.js
+package-lock.json
+yarn.lock
+
+# Next.js build output
+/.next/
+/out/
+/build/
+/.swc/
+
+# Testing
+/coverage/
+/.nyc_output/
+
+# Environment variables
+.env*.local
+.env
+
+# Vercel
+.vercel
+
+# Logs
+logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# local env files
-.env*.local
-.env
-
-# vercel
-.vercel
-
-# typescript
+# TypeScript
 *.tsbuildinfo
 next-env.d.ts
+
+# PWA / Service Worker
+/public/sw.js
+/public/workbox-*.js
