--- a/package.json
+++ b/package.json
@@ -11,20 +11,20 @@
     "test:debug": "playwright test --debug"
   },
   "dependencies": {
-    "isbot": "^5.1.27",
-    "next": "^15.4.4",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "isbot": "^3.6.13",
+    "next": "^13.5.6",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@playwright/test": "^1.54.1",
-    "@tailwindcss/postcss": "^4.1.11",
+    "@playwright/test": "^1.39.0",
+    "@tailwindcss/forms": "^0.5.7",
     "@types/node": "^20",
-    "@types/react": "^19.1.2",
-    "@types/react-dom": "^19.1.2",
-    "autoprefixer": "^10.4.19",
-    "postcss": "^8.4.39",
-    "tailwindcss": "^4.1.4",
-    "typescript": "^5.8.3"
+    "@types/react": "^18.2.35",
+    "@types/react-dom": "^18.2.14",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.5",
+    "typescript": "^5.2.2"
   }
 }
